# RayTracer

./: .gitignore  CMakeLists.txt  README.md  build_unix.sh  build_win.bat  env_template.cmake  topng.bat  topngd.bat
lib/include/: engine.h
lib/include/config/: config.h
lib/include/data/: bounding_box.h  bounding_volume.h  colour.h  framebuffer.h  hit.h  kd_tree.h  object.h  photon.h  ray.h  transform.h  vector.h
lib/include/geometry/: csg.h  cube.h  object3D.h  plane.h  polymesh.h  quadric.h  sphere.h
lib/include/lights/: light.h  point_light.h  square_light.h
lib/include/materials/: dielectric.h  emissive.h  global_material.h  lambertian.h  material.h  mirror.h  normat.h  phong.h
lib/include/rendering/: camera.h  scene.h
lib/include/textures/: block_texture.h  checker_texture.h  image_texture.h  texture.h
lib/include/util/: util.h
lib/src/data/: bounding_volume.cpp  framebuffer.cpp
lib/src/geometry/: cube.cpp  plane.cpp  polymesh.cpp  sphere.cpp
lib/src/materials/: lambertian.cpp  phong.cpp
lib/src/rendering/: camera.cpp  scene.cpp
lib/src/util/: util.cpp
src/: main.cpp
src/scenes/: create_cornell_box_scene.cpp  create_cornell_box_scene.h  create_csg_test_scene.cpp  create_csg_test_scene.h  create_tea_scene.cpp  create_tea_scene.h  create_test_scene.cpp  create_test_scene.h  scenes.h
